2002-11-05  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom8.h: Sync up with latest datasheet (2486H-AVR-09/02).

2002-11-04  Theodore A. Roth  <troth@openavr.org>

	* doc/api/Makefile.am: Fix all pngs to have proper transparency.

2002-11-04  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/TODO: Updated.
	* include/avr/sleep.h: New file.
	* include/avr/sfr_defs.h: Fix spelling in dox comments.

2002-10-31  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/examples/demo/Makefile: Set eeprom base addr to 0x0.

2002-10-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: fix typo.

2002-10-30  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/Makefile.am: Make `make demo` less likely to fail.

2002-10-30  Theodore A. Roth  <troth@openavr.org>

	* doc/api/dox.css: Change default html colors.
	* doc/api/dox_html_header: Don't spec body bgcolor.

2002-10-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Fix the fix.

2002-10-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Make the addresses used consistent.
	* doc/api/malloc-x*.fig: Ditto.

2002-10-28  Theodore A. Roth  <troth@openavr.org>

	* doc/api/malloc-std.fig: Make figs more consistent.
	* doc/api/malloc-x1.fig: Make figs more consistent.
	* doc/api/malloc-x2.fig: Make figs more consistent.
	* doc/api/malloc.dox: Grammar and spelling fixups.

2002-10-28  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* configure.in: Fix typo.
	Update my email address.
	Add CHECK_PNG_UTILS.
	* doc/api/Makefile.am: Add png and eps files to clean list.
	Add transparency to png images.
	* doc/examples/demo/Makefile: Add transparency to png images.

2002-10-28  Theodore A. Roth  <troth@openavr.org>
